# parasect

./: .bumpversion.cfg  .gitignore  README.md  manifest.in  pyproject.toml  setup.cfg  setup.py  tox.ini
app/: .gitignore  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  run_docker.sh  server-environment.yml  server-requirements.txt
app/src/client/: .gitignore  package-lock.json  package.json
app/src/server/: .flaskenv  .gitignore  api.py  parasect.db  requirements.txt  run_server.sh
benchmarking/: compare_training_sets.py
benchmarking/data_processing/: nrpstransformer.py
condensed/: README.md  paras_condensed.py  paras_outlink.py
condensed/data/: dataset_paras.tsv
data/: README.md  domain_taxonomy.txt  example.fasta  parasect_dataset.txt
data/compound_data/: included_substrates.txt
data/compound_data/substrate_mappings/: old_paras_substrate_mapping.txt
data/hmm/: test_filtered.txt  train.txt
data/hmm/crossvalidation/: crossval_train_02.txt  crossval_train_03.txt
data/sequence_data/: structure_alignment.fasta
data/sequence_data/amino_acid_properties/: 15_aa_properties_normalised.txt  amino_acid_dictionary.json  physicochemical_properties.txt
data/sequence_data/clades_per_group_active_site/: aromatic_acids.txt  asx_glx.txt  cyclic_aliphatic.txt  phenylglycine.txt  small.txt  small_hydrophobic.txt  small_polar.txt
data/sequence_data/clades_per_group_full/: aromatic.txt  cyclic_aliphatic.txt  small.txt  small_hydrophobic.txt
data/sequence_data/clades_per_group_stach/: NH2_containing.txt  aromatic.txt  aromatic_acids.txt  asx_glx.txt  cyclic_aliphatic.txt  small.txt  small_hydrophobic.txt  small_polar.txt
data/sequence_data/clades_per_substrate_active_site/: 2,3-dihydroxybenzoic acid.txt  2-aminoadipic acid.txt  2-aminoisobutyric acid.txt  D-alanine.txt  alanine.txt  anthranilic acid.txt  aspartic acid.txt  beta-alanine.txt  cysteine.txt  glutamic acid.txt  glutamine.txt  histidine.txt  ornithine.txt  proline.txt  serine.txt
data/sequence_data/clades_per_substrate_full/: 2-aminoadipic acid.txt  2-aminoisobutyric acid.txt  3,5-dihydroxyphenylglycine.txt  arginine.txt  aspartic acid.txt  beta-alanine.txt  cysteine.txt  glutamic acid.txt  glutamine.txt  glycine.txt  histidine.txt  isoleucine.txt  leucine.txt  pipecolic acid.txt  proline.txt  salicylic acid.txt  tyrosine.txt
data/sequence_data/clades_per_substrate_stach/: 2,4-diaminobutyric acid.txt  4-hydroxyphenylglycine.txt  D-alanine.txt  N5-formyl-N5-hydroxyornithine.txt  R-beta-hydroxytyrosine.txt  arginine.txt  asparagine.txt  aspartic acid.txt  cysteine.txt  glycine.txt  leucine.txt  lysine.txt  proline.txt  serine.txt  threonine.txt  tryptophan.txt
data/sequence_data/hmm/: AMP-binding_full.hmm.h3i  AMP-binding_full.hmm.h3m  AMP-binding_hybrid.hmm.h3i  AMP-binding_hybrid.hmm.h3m  AMP-binding_nrpspredictor.hmm.h3f  AMP-binding_nrpspredictor.hmm.h3i  AMP-binding_structure.hmm.h3i  AMP-binding_structure.hmm.h3p
data/sequence_data/residue_positions/: active_site_hmm2.txt
data/sequence_data/sequences/: active_site_34.fasta  reference_sequence.fasta  stachelhaus.fasta
model_training/data_preparation/train_test_splits/: domain_scope.py  split_on_rank.py
paras/: feature_extraction.py  general.py  helpers.py  parsers.py
paras/data/: domain_list.txt  domain_list_hmm.txt
paras/data/benchmarking/: nrpspredictor_abbreviations.txt  nrpspredictor_output_bacterial.txt
paras/data/compound_data/: all_smiles.txt  all_substrates.txt  included_smiles.txt  smiles.txt  specificities.txt
paras/data/example_data/: example_input.fasta  example_input.gbk  example_smiles.tsv
paras/scripts/: general.py
paras/scripts/data_analysis/: active_site_comparison.py  analyse_crossvalidation_results.py  assess_parasect.py  benchmarking.py  bgc_to_taxid.py  check_missing_data.py  compare_active_site_files.py  compare_extraction_methods.py  count_fungal_domains.py  count_substrates.py  dataset_to_fasta.py  deduplicate_sequences.py  domains_from_mibig.py  filter_by_taxonomy.py  filter_mibig_by_prot_name.py  find_conflicting_active_sites.py  find_most_distinct_sequences.py  get_average_identity.py  get_cluster_distributions.py  get_specs_and_tax.py  get_unique_taxa.py  hmm_hits_per_domain.py  parasect_promiscuity_analysis.py  performance_fungal_sequences.py  promiscuity_analysis.py  substrate_specific_benchmarking.py  summarise_results.py  test_hmm_thresholds.py  test_hmms.py  train_test_composition.py  update_domain_sequences.py
paras/scripts/data_processing/: check_mapping_file.py  clean_protein_file.py  divide_into_substrate_groups.py  filter_by_included_substrates.py  get_domain_list.py  (+12 more)
paras/webpage/: main.py  temp.fasta
scripts/: general.py  predict.py
scripts/data_analysis/: active_site_comparison.py  analyse_crossvalidation_results.py  assess_parasect.py  benchmarking.py  check_missing_data.py  compare_active_site_files.py  compare_extraction_methods.py  count_substrates.py  find_conflicting_active_sites.py  find_most_distinct_sequences.py  get_average_identity.py  get_cluster_distributions.py  summarise_results.py  test_hmm_thresholds.py  test_hmms.py  train_test_composition.py
scripts/data_processing/: divide_into_substrate_groups.py  get_domain_list.py  get_domains_substrate.py  get_hmm_domains.py  get_sandpuma_test_set.py  make_domain_lists_per_substrate.py  relabel_data.py  remove_data.py  remove_untrustworthy_datapoints.py  sort_by_substrate.py  temp.py
scripts/machine_learning/: generate_class_weights.py
scripts/math/: distance_calculations.py  shapes.py
scripts/parsers/: atom.py  datapoint.py  external_parsers.py  fasta.py  gbk_to_fasta.py  iterate_over_dir.py  parsers.py  pdb.py  smiles.py  tabular.py  voxel.py
src/parasect/: __init__.py  api.py  cli.py  cli_paras.py  cli_parasect.py  version.py
tests/: __init__.py  test_example.py
tests/core/: __init__.py  test_math.py
training/: README.md  __init__.py  functions.py  target_classes.py  train_paras_all.py  train_paras_common.py  train_parasect.py
training/data/: database.tsv  domains_trustworthy.txt
(+518 files in other folders)
