[metadata]
name = parasect
version = 1.0.0-dev
description = "PARASECT: Predictive Algorithm for Resolving A-domain Specificity featurising Enzyme and Compound in Tandem"
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/BTheDragonMaster/parasect
download_url = https://github.com/BTheDragonMaster/parasect/releases
project_urls =
    Tracker = https://github.com/BTheDragonMaster/parasect/issues
    Source = https://github.com/BTheDragonMaster/parasect

# Author information
author = Barbara Terlouw
author_email = barbara.terlouw@wur.nl
maintainer = Barbara Terlouw
maintainer_email = barbara.terlouw@wur.nl

# License Information
license = GNU General Public License v3.0
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
keywords =
    biosynthetic gene cluster
    a-domain substrate specificity
    random forest

[options]
install_requires =
    pytest
zip_safe = false
include_package_data = True
python_requires = >=3.9
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage

[options.entry_points]
console_scripts =
    parasect = parasect.cli:main

[doc8]
max-line-length = 120

[mypy]
plugins = pydantic.mypy

[flake8]
ignore =
    # pickle
    S301
    # pickle
    S403
    S404
    S603
    # Line break before binary operator (conflicts with black).
    W503 
    # Multiple statements on one line (conflicts with black).
    E704 
    # Whitespace before ':'  (conflicts with black).
    E203
    # Requests call without timeout.
    S113  
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    parasect
    tests