##########################
# Setup.py Configuration #
##########################
[metadata]
name = parasect
version = 1.0.0
description = Predictive algorithm for resolving A-domain specificity featurising enzyme and compound in tandem.
long_description = file: README.md
long_description_content_type = text/markdown

# Author information
author = Barbara Terlouw
author_email = barbara.terlouw@wur.nl
maintainer = David Meijer
maintainer_email = david.meijer@wur.nl

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    paras
    parasect
    non-ribosomal peptide
    substrate specificity
    prediction

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Numpy below 2.0.0 to avoid breaking changes
    numpy<2.0.0

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage

[options.entry_points]
console_scripts =
    parasect = parasect.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#######################
# MyPy Configuration  #
#######################
[mypy]
plugins = pydantic.mypy

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    # pickle
    S301
    # pickle
    S403
    S404
    S603
    # Line break before binary operator (conflicts with black)
    W503
    # Multiple statements on one line (conflicts with black)
    E704
    # whitespace before ':'  (conflicts with black)
    E203
    # Requests call without timeout
    S113
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    parsect
    tests