##########################
# Setup.py Configuration #
##########################
[metadata]
name = parasect
version = 1.0.0
description = Predictive algorithm for resolving A-domain specificity featurising enzyme and compound in tandem.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BTheDragonMaster/parasect/tree/webapp

# Author information
author = Barbara Terlouw
author_email = barbara.terlouw@wur.nl
maintainer = David Meijer
maintainer_email = david.meijer@wur.nl

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    paras
    parasect
    non-ribosomal peptide
    substrate specificity
    prediction

[options]
install_requires =
    more_itertools
    scipy
    biopython
    pikachu-chem
    numpy==1.23.0
    scikit-learn==1.2.0
    ncbi-acc-download>=0.2.5

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
parasect.data =
    *.txt
    *.hmm
    *.tsv
    *.fasta

[options.extras_require]
tests =
    coverage
    pytest
    tox

[options.entry_points]
console_scripts =
    parasect = parasect.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#######################
# MyPy Configuration  #
#######################
[mypy]
plugins = pydantic.mypy

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    # too complex functions
    C901
    # assert statements
    S101
    # pickle
    S301
    # pickle
    S403
    S404
    S603
    # Line break before binary operator (conflicts with black)
    W503
    # Multiple statements on one line (conflicts with black)
    E704
    # whitespace before ':'  (conflicts with black)
    E203
    # Requests call without timeout
    S113
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    parsect
    tests